fixed some spacing, and clarified html comments

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,12 +8,13 @@ body {
     color: white;
 }
 
-h1 {
+#title {
     font-family: 'Pacifico', cursive;
 }
 
-.lead {
+#subtitle {
     font-family: 'Open Sans', sans-serif;
+    font-size: 26px;
 }
 
 .snowman-img {
@@ -24,5 +25,5 @@ h1 {
 .snowman-img .overlay{
     position: absolute;
     top: 0;
-    right: 0;
+    left: 18%;
 }
